[tool.poetry]
name = "setae-api"
version = "0.3.0"
description = "API middleware for FOLIO"
authors = ["Nick Cappadona <cappadona@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
json2xml = "^3.5.0"
requests = "^2.24.0"
uvicorn = "^0.12.1"
python-dotenv = "^0.14.0"
lxml = "^4.6.2"
httpcore = "0.15"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
flake8 = "^3.9.2"
black = "^21.5b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
